--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "Hoatep",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.922.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "shortid": "^2.2.16",
     "slugify": "^1.5.0"
   },
